[package]
name = "mw-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
config = "0.14.0"
mongodb = "2.8.2"
uuid = {version="1.8.0", features=["v4", "v3", "v1", "fast-rng", "macro-diagnostics"]}